--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Git VSCODE</title>
 </head>
 <body>
-    
+
+    <!--DIV CONTENEDOR 1-->
+    <div class="conteiner"></div>
+        <div class="row"></div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, ducimus!</p>
+        </div>
+    </div>    
+
 </body>
 </html>
